respect nDelFlags, fdo#57661

Change-Id: I77d3e1f537b59504125d66f66f691d01f8f23894
(cherry picked from commit 41095e934bcd83e08a472c8fb53743cd3f8e926c)